sw/source/core/fields/flddat.cxx
@@ -63,6 +63,11 @@ SwDateTimeField::SwDateTimeField(SwDateTimeFieldType* pInitType, sal_uInt16 nSub
 
 OUString SwDateTimeField::ExpandImpl(SwRootFrame const*const) const
 {
+    if (getenv("STABLE_FIELDS_HACK"))
+    {
+        const_cast<SwDateTimeField*>(this)->m_nSubType |= FIXEDFLD; //HACK
+    }
+
     double fVal;
 
     if (!(IsFixed()))
@@ -131,6 +136,11 @@ double SwDateTimeField::GetDateTime(SwDoc& rDoc, const DateTime& rDT)
 
 double SwDateTimeField::GetValue() const
 {
+    if (getenv("STABLE_FIELDS_HACK"))
+    {
+        const_cast<SwDateTimeField*>(this)->m_nSubType |= FIXEDFLD; //HACK
+    }
+
     if (IsFixed())
         return SwValueField::GetValue();
     else
